fix: navbar overlapping scrollbar

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -38,7 +38,7 @@ body {
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
-  overflow-x: hidden;
+  overflow: scroll;
 }
 
 ul {
